Fixed column alignment

--- a/styles/ItineraryPage.module.scss
+++ b/styles/ItineraryPage.module.scss
@@ -17,7 +17,7 @@
 .column {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   gap: 20px;
 }
@@ -66,7 +66,7 @@
 
 .activityListContainer {
   padding-bottom: 15px;
-  width: 600px;
+  width: 100%;
 }
 
 .activityList {
